<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre_fichero"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etNombreArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_archivo"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/btGuardar"
        android:textSize="10sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btLeer"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/bt_leer"
        android:textSize="10sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/btGuardar"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btGuarSD"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/bt_guardar_sd"
        android:textSize="10sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/btLeer"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btLeerSD"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="25dp"
        android:text="@string/bt_leer_sd"
        android:textSize="10sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/btGuarSD"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />

    <EditText
        android:id="@+id/etNota"
        android:layout_width="387dp"
        android:layout_height="462dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_default_nota"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_borrar"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNota" />

</androidx.constraintlayout.widget.ConstraintLayout>
